--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,112 +1,166 @@
 @charset "UTF-8";
 /* Reset and base styles  */
 * {
-  padding: 0px;
-  margin: 0px;
-  border: none;
+    padding: 0px;
+    margin: 0px;
+    border: none;
+}
+
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  scroll-behavior: smooth;
+    line-height: 1.15; /* 1 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+    scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
+    margin: 0;
+    font-family: Inter-Medium, sans-serif;
 }
 
 @font-face {
-  font-family: "Inter-Medium";
-  src: url(../fonts/Inter-Medium.woff2) format("woff2"), url(../fonts/Inter-Medium.woff) format("woff"), url(../fonts/Inter-Medium.otf) format("truetype");
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Inter-Medium";
+    src: url(../fonts/Inter-Medium.woff2) format("woff2"), url(../fonts/Inter-Medium.woff) format("woff"), url(../fonts/Inter-Medium.otf) format("truetype");
+    font-weight: 500;
+    font-style: normal;
 }
 
 :root {
-  --dark: #000000;
-  --light-color: #ffffff;
-  --opacity: rgba(255, 255, 255, 0.5);
+    --dark: #000000;
+    --light-color: #ffffff;
+    --gray-color: #D5C9BE;
+    --support-color: #38535D;
+    --menu-color: #0C72DF;
+    --opacity: rgba(255, 255, 255, 0.5);
 }
 
-/*кастомные стили*/
+/* кастомные стили */
 
 .video-container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .video-container video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-  z-index: -1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
 }
 
 .text-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
 }
 
-.text-content{
-  padding: 30px 20px;
-  mix-blend-mode: hard-light;
-  text-align: justify;
-  background-color: var(--dark);
+.text-content {
+    padding: 30px 20px;
+    mix-blend-mode: hard-light;
+    text-align: justify;
+    background-color: var(--dark);
 
-  color: var(--light-color);
-  font-family: Inter-Medium, sans-serif;
-  font-size: calc(2.7rem + 2vw);
-  font-weight: 700;
-  line-height: 1.5;
+    color: var(--light-color);
+    font-size: calc(2.7rem + 2vw);
+    font-weight: 700;
+    line-height: 1.5;
 
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  row-gap: 0.7rem;
-  column-gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    row-gap: 0.7rem;
+    column-gap: 1rem;
 }
 
-.bg-dark{
-  height: 100%;
-  position: relative;
-  top: -5px;
-  background-color: var(--dark);
+.bg-dark {
+    height: 100%;
+    position: relative;
+    top: -5px;
+    background-color: var(--dark);
 }
 
 .gap {
-  position: relative;
-  height: .7em;
-  background-color: transparent;
-  mix-blend-mode: lighten;
-  min-width: 1em;
-  flex-grow: 1;
+    position: relative;
+    height: .7em;
+    background-color: transparent;
+    mix-blend-mode: lighten;
+    min-width: 1em;
+    flex-grow: 1;
 }
 
-.gap:before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--opacity);
-  mix-blend-mode: lighten;
+.gap:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--opacity);
+    mix-blend-mode: lighten;
+}
+
+
+/* ссылка на проект */
+.contacts {
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+}
+
+.contacts__list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contacts__item a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+    width: 75px;
+    height: 75px;
+    font-size: 12px;
+    color: var(--dark);
+    background-color: var(--light-color);
+    border: 1px solid var(--dark);
+    transition: all .3s;
+}
+
+.contacts__item a:hover {
+    background-color: var(--gray-color);
+    color: var(--menu-color);
+    transition: all .3s;
+}
+
+@media (max-width: 468px){
+    .contacts__item a{
+        font-size: 10px;
+        width: 55px;
+        height: 55px;
+    }
 }
